# llm-quanta

./: README.md  pyproject.toml
src/llm_quanta/: __init__.py  cli.py
src/llm_quanta/benchmarks/: __init__.py  accuracy.py  base.py  latency.py  memory.py  perplexity.py  runner.py
src/llm_quanta/quantizers/: __init__.py  awq.py  base.py  bitsandbytes.py  gguf.py  gptq.py  registry.py
src/llm_quanta/reports/: __init__.py  comparison.py  generator.py
tests/: __init__.py  test_benchmarks.py  test_cli.py  test_quantizers.py  test_reports.py
